--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ryn's</title>
+    <title>USA_GEO OFF THE SKILY</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <center>
         <div class="flex">
-          <a href="https://drive.google.com/open?id=1MI0Z81msUQQ3RQBdbwj_ZY1NRkZMRFJd" class="bttn">Thank You</a>
+          <a href="https://i.ibb.co/Q9qYnyT/geov.png" class="bttn">Thank For All Frend</a>
         </div></center>
     <center>
-        <h2><button class="button button1" id="textx">Text</button></h2>
-        <h2><button class="button button2" id="imagex">Image</button></h2>
-        <h2><button class="button button3" id="videox">Video</button></h2>
-        <h2><button class="button button4" id="audiox">Audio</button></h2>
-        <h2><button class="button button5" id="stickerx">Big Sticker</button></h2>
+        <p><button class="button button1" id="textx">KLIK FOR USAGE CODE</button></p>
     <center>
-        <h2 style="color: #3f3f3f;">Designed by <a href="https://ari-yk.github.io/" style="color: #3f3f3f; text-decoration: none; font-size: 20px;">Ari.</a></h2>
+        <h2 style="color: #3f3f3f;">Designed fork; <h2 href="https://geousa.herokuapp.com/" style="color: #3f3f3f; text-decoration: none; font-size: 20px;">DENMAS GEO</h2></h2><div align="center"> <p><iframe src="https://www.youtube.com/embed/NgKB4Ww4Suo?feature=player_detailpage?rel=0&autoplay=0" frameborder="0" allowfullscreen="yes"></iframe></p></div>
     </center>
     <script src="https://d.line-scdn.net/liff/1.0/sdk.js"></script>
     <script src="liff-starter.js"></script>
